fixes year buttons visibility bug

--- a/styles/style.css
+++ b/styles/style.css
@@ -41,10 +41,10 @@ body {
 
 .hidden {
     display: none;
+    visibility: hidden;
 }
 
 #left-panel{
-    display: flex;
     flex-direction: row;
     align-items: end;
     justify-content: center;
